# Encryption

./: CMakeLists.txt  DLL.def  Encryption  Entry.c  Main.c  Makefile  readme.md
Headers/: Entry.h  Header.h
Headers/Encoders/: Encoder.h  EncoderDispatcher.h  UU_Encode.h
Headers/Encryptions/: AES_256_GCM.h  Encode.h  EncodeDispatcher.h  Encryption.h  EncryptionDispatcher.h
Headers/FileGenerations/: FileGeneration.h
Sources/: CMakeLists.txt
Sources/Encoders/: CMakeLists.txt  Encoder.c  EncoderDispatcher.c  UU_Encode.c
Sources/Encryptions/: AES_256_GCM.c  CMakeLists.txt  Encode.c  EncodeDispatcher.c  Encryption.c  EncryptionDispatcher.c
Sources/FileGenerations/: CMakeLists.txt  FileGeneration.c
docs/: Doxyfile
docs/html/: _a_e_s__256___g_c_m_8c.html  _a_e_s__256___g_c_m_8c_8o_8d.html  _a_e_s__256___g_c_m_8c_8o_8d_source.html  _a_e_s__256___g_c_m_8c__incl.map  _a_e_s__256___g_c_m_8c__incl.md5  _a_e_s__256___g_c_m_8c_source.html  _a_e_s__256___g_c_m_8h.html  _a_e_s__256___g_c_m_8h__dep__incl.map  _a_e_s__256___g_c_m_8h__dep__incl.md5  _a_e_s__256___g_c_m_8h__incl.map  _a_e_s__256___g_c_m_8h__incl.md5  _a_e_s__256___g_c_m_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _encoder_8c.html  _encoder_8c_8o_8d.html  _encoder_8c_8o_8d_source.html  _encoder_8c__incl.map  _encoder_8c__incl.md5  _encoder_8c_source.html  _encoder_8h.html  _encoder_8h__dep__incl.map  _encoder_8h__dep__incl.md5  _encoder_8h__incl.map  _encoder_8h__incl.md5  _encoder_8h_source.html  _encoder_dispatcher_8c.html  _encoder_dispatcher_8c_8o_8d.html  _encoder_dispatcher_8c_8o_8d_source.html  _encoder_dispatcher_8c__incl.map  _encoder_dispatcher_8c__incl.md5  (+248 more)
tests/: CMakeLists.txt  Main.c  UU_Encode_test.c
tests/Headers/: Header.h  test_Encoders_UU_Encode.h  test_Entry.h
tests/Sources/: test_Encoders_UU_Encoder.c  test_Entry.c
(+49 files in other folders)
